# gazelle_rust

./: BUILD.bazel  WORKSPACE  deps.bzl  extension.go  go.mod  go.sum  notes.md  parser.go  readme.md
test/: BUILD.bazel
